@@ -31,12 +31,11 @@
 #define GERBV_DEF_CURSOR	NULL
 
 /*
- * Convert a gerber image to a GTK pixmap to be displayed
+ * Convert a gerber image to a GDK clip mask to be used when creating pixmap
  */
 int 
 image2pixmap(GdkPixmap **pixmap, struct gerb_image *image, 
 	     int scale, double trans_x, double trans_y,
-	     enum polarity_t polarity, 
-	     GdkColor *fg_color, GdkColor *bg_color, GdkColor *err_color);
+	     enum polarity_t polarity);
 
 #endif /* DRAW_H */
